--- a/exp9/style.css
+++ b/exp9/style.css
@@ -12,3 +12,10 @@
     font-size: 20px;
     text-align: center;
 }
+.wrapper div span{
+    border: 2px solid rgb(0, 174, 255);
+    border-radius: 3px;
+    background-color: rgb(255, 224, 240);
+    padding: 5px;
+    font-size: 16px;
+}                                                                                                                                                                                                                                       .
