--- a/exp9grid/style.css
+++ b/exp9grid/style.css
@@ -21,3 +21,11 @@ h1{
     
 
 `}
+tablet view@media (max-width: 768px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    h1{
+        grid-column: span 2;
+    }
+}
